feat: expansion that typechecks, repeats and runs twice safely
The engine could write annotations no JVM would accept and, run again without
a clean, wrote them twice. What changed:

- every annotation is checked against the type it claims to be before it is
  written: unknown member, wrong type, unknown enum constant and a required
  member left unset each fail the build naming the target
- expanding is idempotent: what is written replaces what was there, and an
  expanded annotation is dropped unless it asks to be kept (keepOriginal is
  now false by default)
- addOrModifyAnnotation finally starts from the annotation the target carries,
  not only from what another expander produced in the same run
- two of a @Repeatable type are written into their container; two of a type
  that is not repeatable is an error
- a single value given for an array member means an array of one, before any
  merge, so it adds to what is there
- annotations land where their @Retention says
- failures are loud: an expander that cannot be loaded, constructed or run
  stops the build instead of quietly expanding nothing
- the rewrite no longer recomputes frames or resolves supertypes, so only the
  annotations of a class can ever differ

Also: the API is one builder instead of three, ClassInfo/MethodInfo/FieldInfo
are records, ExpansionMetadata and the empty jdae-processor are gone, and
jdae-core has a test suite that compiles fixtures, expands them and reads the
annotations back through a fresh classloader.

Main code is 388 lines shorter with 448 lines of tests where there were none.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>