@@ -1,10 +1,8 @@
 package dev.relism.jdae.plugin;
 
-import dev.relism.jdae.core.bytecode.ClassScanner;
-import dev.relism.jdae.core.bytecode.ExpanderCandidate;
-import dev.relism.jdae.core.expansion.ExpansionEngine;
+import dev.relism.jdae.api.ExpansionException;
 import dev.relism.jdae.core.expansion.ExpanderRegistry;
-import org.apache.maven.artifact.DependencyResolutionRequiredException;
+import dev.relism.jdae.core.expansion.ExpansionEngine;
 import org.apache.maven.plugin.AbstractMojo;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
@@ -18,117 +16,81 @@ import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Stream;
 
-@Mojo(
-        name = "expand-annotations",
-        defaultPhase = LifecyclePhase.PROCESS_CLASSES,
-        requiresDependencyResolution = ResolutionScope.COMPILE_PLUS_RUNTIME,
-        threadSafe = true
-)
+/**
+ * Expands the annotations in this module's compiled classes.
+ *
+ * <p>Runs after compilation and before the tests, so everything downstream — tests, packaging,
+ * anything reading the classes reflectively — sees the expanded form. Expanders are loaded from
+ * the module's own compile classpath, which is what lets them name the annotations they build.
+ */
+@Mojo(name = "expand-annotations", defaultPhase = LifecyclePhase.PROCESS_CLASSES,
+        requiresDependencyResolution = ResolutionScope.COMPILE_PLUS_RUNTIME, threadSafe = true)
 public class JDAEExpandMojo extends AbstractMojo {
 
     @Parameter(defaultValue = "${project.build.outputDirectory}", required = true, readonly = true)
     private String classesDirectory;
 
-    @Parameter(property = "jdae.removeOriginal", defaultValue = "true")
-    private boolean removeOriginal;
-
     @Parameter(defaultValue = "${project}", readonly = true, required = true)
     private MavenProject project;
 
+    /** Skips expansion entirely, for a build that only needs to compile. */
+    @Parameter(property = "jdae.skip", defaultValue = "false")
+    private boolean skip;
+
     @Override
     public void execute() throws MojoExecutionException {
-        Path classesDir = Paths.get(classesDirectory);
-        if (!Files.exists(classesDir)) {
-            getLog().info("Classes directory does not exist: " + classesDir);
+        if (skip) {
+            getLog().info("JDAE: skipped");
             return;
         }
+        Path classes = Path.of(classesDirectory);
+        if (!Files.exists(classes)) return;
 
-        URLClassLoader projectClassLoader = createProjectClassLoader();
+        Thread thread = Thread.currentThread();
+        ClassLoader previous = thread.getContextClassLoader();
 
-        ClassScanner scanner = new ClassScanner();
-
-        Thread currentThread = Thread.currentThread();
-        ClassLoader originalClassLoader = currentThread.getContextClassLoader();
-        currentThread.setContextClassLoader(projectClassLoader);
-
-        try {
-            ExpansionEngine engine = new ExpansionEngine(new ExpanderRegistry(projectClassLoader));
-
+        try (URLClassLoader loader = classLoader()) {
+            thread.setContextClassLoader(loader);
+            ExpansionEngine engine = new ExpansionEngine(new ExpanderRegistry(loader), loader);
             int expanded = 0;
-            int skipped = 0;
 
-            try (Stream<Path> paths = Files.walk(classesDir)) {
-                List<Path> classFiles = paths
-                        .filter(p -> p.toString().endsWith(".class"))
-                        .toList();
-
-                for (Path p : classFiles) {
-                    byte[] original = Files.readAllBytes(p);
-                    List<ExpanderCandidate> candidates = scanner.scan(original);
-                    if (candidates.isEmpty()) {
-                        skipped++;
-                        continue;
-                    }
-                    byte[] modified = engine.expand(original, candidates, removeOriginal);
-                    if (modified != original && java.util.Arrays.compare(modified, original) != 0) {
-                        Files.write(p, modified);
+            try (Stream<Path> tree = Files.walk(classes)) {
+                for (Path file : tree.filter(p -> p.toString().endsWith(".class")).toList()) {
+                    byte[] original = Files.readAllBytes(file);
+                    byte[] result = engine.expand(original);
+                    if (result != original) {
+                        Files.write(file, result);
                         expanded++;
-                    } else {
-                        skipped++;
+                        getLog().debug("JDAE: expanded " + classes.relativize(file));
                     }
                 }
-            } catch (IOException e) {
-                throw new MojoExecutionException("Failed during JDAE expansion", e);
             }
-
-            getLog().info("JDAE: expanded " + expanded + " class files, skipped " + skipped);
-
+            getLog().info("JDAE: expanded " + expanded + (expanded == 1 ? " class" : " classes"));
+        } catch (ExpansionException refused) {
+            throw new MojoExecutionException(refused.getMessage(), refused);
+        } catch (IOException e) {
+            throw new MojoExecutionException("JDAE could not read or write " + classesDirectory, e);
         } finally {
-            currentThread.setContextClassLoader(originalClassLoader);
-            try {
-                projectClassLoader.close();
-            } catch (IOException e) {
-                getLog().warn("Failed to close project classloader", e);
-            }
+            thread.setContextClassLoader(previous);
         }
     }
 
-    private URLClassLoader createProjectClassLoader() throws MojoExecutionException {
+    /** The module's own classes first, then everything it compiles against. */
+    private URLClassLoader classLoader() throws MojoExecutionException {
         List<URL> urls = new ArrayList<>();
-
         try {
-            urls.add(Paths.get(classesDirectory).toUri().toURL());
-            // Include both compile and runtime classpath elements to ensure all application types
-            // referenced from annotation members (e.g., Class<?> values) are resolvable in dev mode.
-            List<String> compileCp = project.getCompileClasspathElements();
-            for (String element : compileCp) {
-                urls.add(Paths.get(element).toUri().toURL());
+            for (String element : project.getCompileClasspathElements()) urls.add(Path.of(element).toUri().toURL());
+            for (String element : project.getRuntimeClasspathElements()) {
+                URL url = Path.of(element).toUri().toURL();
+                if (!urls.contains(url)) urls.add(url);
             }
-            List<String> runtimeCp = project.getRuntimeClasspathElements();
-            for (String element : runtimeCp) {
-                URL url = Paths.get(element).toUri().toURL();
-                if (!urls.contains(url)) {
-                    urls.add(url);
-                }
-            }
-
-            getLog().debug("JDAE ClassLoader URLs (" + urls.size() + " entries):");
-            if (getLog().isDebugEnabled()) {
-                urls.forEach(url -> getLog().debug("  - " + url));
-            }
-
-        } catch (DependencyResolutionRequiredException | IOException e) {
-            throw new MojoExecutionException("Failed to resolve project dependencies for JDAE", e);
+        } catch (Exception e) {
+            throw new MojoExecutionException("JDAE could not resolve this module's classpath", e);
         }
-
-        return new URLClassLoader(
-                urls.toArray(new URL[0]),
-                getClass().getClassLoader()
-        );
+        return new URLClassLoader(urls.toArray(URL[]::new), getClass().getClassLoader());
     }
 }
